[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "train-monitor"
version = "0.1.0"
description = "Real-time training dashboard for deep learning — loss curves, GPU stats, gradient monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "czhang30"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "flask>=2.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest", "requests"]

[project.scripts]
train-monitor = "monitor.dashboard:main"

[tool.setuptools.packages.find]
include = ["monitor*"]
